--- a/src/pages/google/google.scss
+++ b/src/pages/google/google.scss
@@ -2,4 +2,31 @@ page-google {
 	  #map_canvas {
 	    height: 100%;
 	  }
+
+	 #loderfade 
+	{
+		display: none;
+		position:fixed;
+		top: 0%;
+		left: 0%;
+		width: 100%;
+		height: 100%;
+		background-color: #666;
+		z-index: 1001;
+		-moz-opacity: 0.8;
+		opacity: .70;
+		filter: alpha(opacity=80);
+	}
+	#lodermodal 
+	{
+		
+		position: fixed;
+		top: 45%;
+		left:30%;
+		width: 40%;
+		margin: 0px auto;
+		z-index: 1002;
+		text-align:center;
+		overflow: auto;
+	}
 }
