google login remaining

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
       </ion-toolbar>
       <ion-toolbar class="custom-subheader" color="app">
           <ion-title>
-                <ion-icon ios="ios-contact" md="ios-contact"></ion-icon> User Name
+                <ion-icon ios="ios-contact" md="ios-contact"></ion-icon> {{currentUser.name}}
           </ion-title>
       </ion-toolbar>
   </ion-header>
