--- a/src/pages/myinterest/myinterest.scss
+++ b/src/pages/myinterest/myinterest.scss
@@ -1,3 +1,39 @@
 page-myinterest {
+	.padding15{
+		padding:16px 10px;
 
+	}
+
+	.list-md ion-item-options .button {
+    display: -webkit-inline-flex;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 1px 0;
+    height: calc(100% - 11px);
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    box-sizing: border-box;
+	}
+
+	.custom{
+		box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+		margin-bottom: 10px;
+		padding-bottom: 15px;
+		border: 1px solid #f3e9e9 !important;
+	}
+
+	.no-more-item{
+		text-align: center;
+		opacity: 0.3;
+		margin-top: 50px;
+		margin-bottom: 50px;
+	}
+
+	.pading-lr{
+		padding: 0px 15px !important;
+	}
 }
